level_zero-sys/src/ze_api.rs

extern "C" {
    #[doc = ""]
    #[doc = " @brief Creates a context for the driver."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application must only use the context for the driver which was"]
    #[doc = "       provided during creation."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function must be thread-safe."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDriver`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == desc`"]
    #[doc = "         + `nullptr == phContext`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_ENUMERATION"]
    #[doc = "         + `0x1 < desc->flags`"]
    #[doc = "     - ::ZE_RESULT_ERROR_OUT_OF_HOST_MEMORY"]
    #[doc = "     - ::ZE_RESULT_ERROR_OUT_OF_DEVICE_MEMORY"]
    pub fn zeContextCreate(
        hDriver: ze_driver_handle_t,
        desc: *const ze_context_desc_t,
        phContext: *mut ze_context_handle_t,
    ) -> ze_result_t;
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Destroys a context."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application must ensure the device is not currently referencing"]
    #[doc = "       the context before it is deleted."]
    #[doc = "     - The implementation of this function may immediately free all Host and"]
    #[doc = "       Device allocations associated with this context."]
    #[doc = "     - The application must **not** call this function from simultaneous"]
    #[doc = "       threads with the same context handle."]
    #[doc = "     - The implementation of this function must be thread-safe."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hContext`"]
    #[doc = "     - ::ZE_RESULT_ERROR_HANDLE_OBJECT_IN_USE"]
    pub fn zeContextDestroy(hContext: ze_context_handle_t) -> ze_result_t;
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Returns current status of the context."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads with"]
    #[doc = "       the same context handle."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hContext`"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "         + Context is available for use."]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "         + Context is invalid; due to device lost or reset."]
    pub fn zeContextGetStatus(hContext: ze_context_handle_t) -> ze_result_t;
}
impl _ze_command_queue_flags_t {
    #[doc = "< command queue should be optimized for submission to a single device engine."]
    #[doc = "< driver **must** disable any implicit optimizations for distributing"]
    #[doc = "< work across multiple engines."]
    #[doc = "< this flag should be used when applications want full control over"]
    #[doc = "< multi-engine submission and scheduling."]
    pub const ZE_COMMAND_QUEUE_FLAG_EXPLICIT_ONLY: _ze_command_queue_flags_t =
        _ze_command_queue_flags_t(1);
}
impl _ze_command_queue_flags_t {
    pub const ZE_COMMAND_QUEUE_FLAG_FORCE_UINT32: _ze_command_queue_flags_t =
        _ze_command_queue_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_command_queue_flags_t> for _ze_command_queue_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_command_queue_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_command_queue_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_command_queue_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_command_queue_flags_t> for _ze_command_queue_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_command_queue_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_command_queue_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_command_queue_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported command queue flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_command_queue_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported command queue flags"]
pub use self::_ze_command_queue_flags_t as ze_command_queue_flags_t;
impl _ze_command_queue_mode_t {
    #[doc = "< implicit default behavior; uses driver-based heuristics"]
    pub const ZE_COMMAND_QUEUE_MODE_DEFAULT: _ze_command_queue_mode_t = _ze_command_queue_mode_t(0);
}
impl _ze_command_queue_mode_t {
    #[doc = "< Device execution always completes immediately on execute;"]
    #[doc = "< Host thread is blocked using wait on implicit synchronization object"]
    pub const ZE_COMMAND_QUEUE_MODE_SYNCHRONOUS: _ze_command_queue_mode_t =
        _ze_command_queue_mode_t(1);
}
impl _ze_command_queue_mode_t {
    #[doc = "< Device execution is scheduled and will complete in future;"]
    #[doc = "< explicit synchronization object must be used to determine completeness"]
    pub const ZE_COMMAND_QUEUE_MODE_ASYNCHRONOUS: _ze_command_queue_mode_t =
        _ze_command_queue_mode_t(2);
}
impl _ze_command_queue_mode_t {
    pub const ZE_COMMAND_QUEUE_MODE_FORCE_UINT32: _ze_command_queue_mode_t =
        _ze_command_queue_mode_t(2147483647);
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported command queue modes"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_command_queue_mode_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported command queue modes"]
pub use self::_ze_command_queue_mode_t as ze_command_queue_mode_t;
impl _ze_command_queue_priority_t {
    #[doc = "< [default] normal priority"]
    pub const ZE_COMMAND_QUEUE_PRIORITY_NORMAL: _ze_command_queue_priority_t =
        _ze_command_queue_priority_t(0);
}
impl _ze_command_queue_priority_t {
    #[doc = "< lower priority than normal"]
    pub const ZE_COMMAND_QUEUE_PRIORITY_PRIORITY_LOW: _ze_command_queue_priority_t =
        _ze_command_queue_priority_t(1);
}
impl _ze_command_queue_priority_t {
    #[doc = "< higher priority than normal"]
    pub const ZE_COMMAND_QUEUE_PRIORITY_PRIORITY_HIGH: _ze_command_queue_priority_t =
        _ze_command_queue_priority_t(2);
}
impl _ze_command_queue_priority_t {
    pub const ZE_COMMAND_QUEUE_PRIORITY_FORCE_UINT32: _ze_command_queue_priority_t =
        _ze_command_queue_priority_t(2147483647);
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported command queue priorities"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_command_queue_priority_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported command queue priorities"]
pub use self::_ze_command_queue_priority_t as ze_command_queue_priority_t;
#[doc = ""]
#[doc = " @brief Command Queue descriptor"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_command_queue_desc_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in][optional] pointer to extension-specific structure"]
    pub pNext: *const ::std::os::raw::c_void,
    #[doc = "< [in] command queue group ordinal"]
    pub ordinal: u32,
    #[doc = "< [in] command queue index within the group;"]
    #[doc = "< must be zero if ::ZE_COMMAND_QUEUE_FLAG_EXPLICIT_ONLY is not set"]
    pub index: u32,
    #[doc = "< [in] usage flags."]
    #[doc = "< must be 0 (default) or a valid combination of ::ze_command_queue_flags_t;"]
    #[doc = "< default behavior may use implicit driver-based heuristics to balance"]
    #[doc = "< latency and throughput."]
    pub flags: ze_command_queue_flags_t,
    #[doc = "< [in] operation mode"]
    pub mode: ze_command_queue_mode_t,
    #[doc = "< [in] priority"]
    pub priority: ze_command_queue_priority_t,
}
#[test]
fn bindgen_test_layout__ze_command_queue_desc_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_command_queue_desc_t>(),
        40usize,
        concat!("Size of: ", stringify!(_ze_command_queue_desc_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_command_queue_desc_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_command_queue_desc_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).stype as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).pNext as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).ordinal as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(ordinal)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).index as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).flags as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).mode as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(mode)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_desc_t>())).priority as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_desc_t),
            "::",
            stringify!(priority)
        )
    );
}
